# green_analygis

./: README.md  green_analygis.ipynb  pyproject.toml  requirements.txt
countries/: England.geojson  N. Ireland.geojson  Scotland.geojson  Wales.geojson
