[project]
name = "green-analygis"
version = "0.1.0"
description = "Jupyter notebook to analyze GeoData"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.3",
    "geopandas>=1.0.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "pyproject-toml>=0.1.0",
    "voila>=0.5.8",
]
